@@ -1,4 +1,4 @@
-# last modified 2013-10-15 by J. Fox
+# last modified 2014-03-12 by J. Fox
 
 import(grid, lattice, colorspace)
 export(effect, allEffects, all.effects, Effect)
@@ -15,15 +15,18 @@ S3method(Effect, poLCA)
 S3method(Effect, mlm)
 S3method(print, eff)
 S3method(print, efflist)
+S3method(print, mlm.efflist)
 S3method(print, summary.eff)
 S3method(summary, eff)
 S3method(summary, efflist)
+S3method(summary, mlm.efflist)
 S3method(as.data.frame, eff)
 S3method(as.data.frame, effpoly)
 S3method(as.data.frame, efflatent)
 S3method(plot, eff)
 S3method(print, plot.eff)
 S3method(plot, efflist)
+S3method(plot, mlm.efflist)
 S3method(print, effpoly)
 S3method(summary, effpoly)
 S3method(plot, effpoly)
@@ -35,6 +38,7 @@ S3method(allEffects, mer)
 S3method(allEffects, merMod)
 S3method(allEffects, lme)
 S3method(allEffects, poLCA)
+S3method(allEffects, mlm)
 S3method(vcov, eff)
 S3method(vcov, fakeglm)
 S3method(`[`, efflist)
