@@ -1,4 +1,5 @@
 #  Calculate Effects for term(s) in a Multivariate Linear Model 
+#  2014-03-12: Introduced allEffects.mlm(). J. Fox
 
 
 Effect.mlm <- function(focal.predictors, mod, response, ...) {
@@ -26,5 +27,34 @@ Effect.mlm <- function(focal.predictors, mod, response, ...) {
 		class(result) <- "efflist"
 	}
 	result
+}
+
+allEffects.mlm <- function(mod, ...){
+    result <- NextMethod()
+    class(result) <- "mlm.efflist"
+    result
+}
+
+plot.mlm.efflist <- function(x, ...){
+    x <- do.call(c, x)
+    class(x) <- "efflist"
+    plot(x, ...)
+}
+
+summary.mlm.efflist <- function(object, ...){
+    object <- do.call(c, object)
+    for (effect in names(object)){
+        cat("\n\nResponse:", object[[effect]]$response, "\n")
+        print(summary(object[[effect]], ...))
+    }
+}
+
+print.mlm.efflist <- function(x, ...){
+    x <- do.call(c, x)
+    for (effect in names(x)){
+        cat("\n\nResponse:", x[[effect]]$response, "\n")
+        print(x[[effect]], ...)
+    }
+    invisible(x) 
 }
 
